--- a/style.css
+++ b/style.css
@@ -14,10 +14,12 @@ body {
     background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
-    font-size: 20px;
     animation-name: titulo;
     animation-duration: 30s;
-
+   }
+.titulo-cartel{
+    font-size: 20px;
+    font-weight: bolder;
 }
 
 
@@ -56,11 +58,17 @@ body {
 .hero-img {
     display: flex;
     justify-content: center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.287), rgba(0, 0, 0, 0.299)), url(imagenes/pexels-mart-production-8801098.jpg);
-    background-position: left center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.287), rgba(0, 0, 0, 0.299)), url(imagenes/accesoriosdemoda.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 
+
+}
+.titulo-nosotros{
+    color: #FFF6EA;
+    text-transform: uppercase;
+    
 
 }
 
@@ -96,22 +104,41 @@ body {
     text-align: left;
 
 }
+.texto-nosotros{
+    font-size: 20px;
+    color: rgba(237, 232, 224, 0.894);
+}
 
 .card-uno,
 .card-dos,
 .card-tres {
     margin: 50px;
     padding: 50px;
+    color:#0b0606 ;
     text-align: left;
-    box-shadow: -8px 14px 10px 0px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: -8px 14px 10px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: -8px 14px 10px 0px rgba(0, 0, 0, 0.75);
+    border-top-right-radius:25px;
+    border-bottom-left-radius:20px ;
+    background-color: #f7f0f0e8;
+    box-shadow: -8px 14px 10px 0px rgba(84, 64, 64, 0.75);
+    -webkit-box-shadow: -8px 14px 10px 0px rgba(100, 87, 87, 0.75);
+    -moz-box-shadow: -8px 14px 10px 0px rgba(230, 215, 215, 0.75);
 
+}
+.card-uno{
+    background-color:#E4D1B9;
+    
 }
 
 
+.titulo-card{
+    font-size: 25px;
+    font-weight: bolder;
+}
 
-
+.p-card{
+  font-size: 20px;
+  text-transform: none;
+}
 
 /* ARTICULOS */
 .galeria-container {
@@ -122,11 +149,11 @@ body {
 }
 
 .item-uno {
-    grid-column-start: span 2;
+    grid-column-start: span 3;
 }
 
-.item-dos {
-    grid-column-start: span 2;
+.galeria-item{
+    position: relative;
 }
 
 .galeria-item img {
@@ -138,33 +165,56 @@ body {
 
 
 
-.titulo-item {
-    color: rgb(12, 12, 12);
-    font-size: 20px;
-    font-weight: bolder;
-    text-align: center;
-    
 
-}
 
 .item-uno{
     position: relative;
 }
+
+
+
 .titulo-item-uno{
     background-color:rgba(247, 205, 172, 0.504) ;
+    color: #0b0606;
     position: absolute;
-    bottom: 20px;
+    bottom: 35px;
+    margin-left: 25px;
+    padding: 20px;
+    border-radius: 5px;
+    text-transform: uppercase;
     font-size: 40px;
     font-weight: bolder;
   
     
 }
+/* CUEROS */
+.info-texto{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items:baseline;
+    padding: 30px;
+ 
+    
 
+}
+.info-texto div{
+    margin:150px 50px;
+}
+.info-uno{
+    background-color: #92BA92;
+}
+
+
+
+
+/* FOOTER */
 .footer-container {
     background-color: rgb(58, 56, 69);
     margin-top: 50px;
     padding: 20px 20px;
     color: rgb(247, 204, 172);
+    text-align: center;
 }
 
 .footer-container a {
@@ -172,18 +222,20 @@ body {
     color: black;
     font-size: 20px;
 }
-
 .footer-container a:hover {
     color: rgba(240, 255, 255, 0.75);
 }
 
 .btn-style {
+    border: none;
+    border-radius: 5px;
     color: rgb(247, 204, 172);
     background-color: rgb(245, 245, 245);
     font-size: 20px;
 }
 
 .btn-style:hover {
+    
     color: rgb(245, 245, 245);
     font-weight: bolder;
     background-color: rgba(0, 0, 0, 0.26);
@@ -199,6 +251,7 @@ body {
     .texto-hero {
         flex-direction: column;
         align-items: center;
+       
     }
 
     .mayoristas-section {
@@ -209,6 +262,9 @@ body {
         -webkit-box-shadow: -16px 9px 5px -5px rgba(15, 14, 15, 0.75);
         -moz-box-shadow: -16px 9px 5px -5px rgba(15, 14, 15, 0.75);
     }
+    .card-uno{
+        background-color: #92BA92;
+    }
 
 }
 
@@ -217,7 +273,9 @@ body {
         display: grid;
         grid-template-columns: 1fr;
     }
-
+    .titulo-item-uno{
+        background-color:rgba(245, 238, 233, 0.504) ;
+    }
     .footer-container {
         background-color: rgb(249, 235, 200);
         color: black;
