--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
 
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:ital,wght@0,300;1,300&family=Poppins:wght@300&display=swap');
+
+
+
 
 body {
     font-family: 'Montserrat', sans-serif;
@@ -16,8 +19,9 @@ body {
     text-align: center;
     animation-name: titulo;
     animation-duration: 30s;
-   }
-.titulo-cartel{
+}
+
+.titulo-cartel {
     font-size: 20px;
     font-weight: bolder;
 }
@@ -51,25 +55,52 @@ body {
     color: black;
 }
 
+.titulo-marca {
+    font-size: 35px;
+
+}
+
 .nav-link {
     font-weight: 500;
+    color: #0b0606;
+    font-size: 20px;
+    
+    
+}
+.nav-link:hover{
+    color: #93329E;
 }
 
 .hero-img {
-    display: flex;
+     display: flex;
     justify-content: center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.287), rgba(0, 0, 0, 0.299)), url(imagenes/accesoriosdemoda.jpg);
+      /* align-items: center; */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.287), rgba(0, 0, 0, 0.299)), url(imagenes/accesoriosdemoda1.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 
 
-}
-.titulo-nosotros{
-    color: #FFF6EA;
-    text-transform: uppercase;
-    
 
+}
+
+.titulo-nosotros {
+    color: #FFF6EA;
+    text-transform: capitalize;
+    font-size: 40px;
+    font-weight: 600;
+
+
+}
+
+.texto-nosotros {
+    font-size: 20px;
+    color: #FFEDED;
+    font-family: 'Merriweather', serif;
+}
+.texto-nosotros::selection{
+    color: #a9896f;
+   
 }
 
 .texto-hero {
@@ -77,8 +108,6 @@ body {
     text-align: left;
     font-weight: bolder;
     color: rgba(255, 255, 255, 0.956);
-
-
 }
 
 .summit-style {
@@ -99,45 +128,58 @@ body {
 
 /* SECTION MAYORISTAS*/
 .mayoristas-section {
+    background-color: white;
     display: flex;
     justify-content: space-between;
-    text-align: left;
-
-}
-.texto-nosotros{
-    font-size: 20px;
-    color: rgba(237, 232, 224, 0.894);
+    text-align: center;
+    /* text align left */
 }
 
 .card-uno,
 .card-dos,
 .card-tres {
+    width: 350px;
+    height: 300px;
     margin: 50px;
     padding: 50px;
-    color:#0b0606 ;
-    text-align: left;
-    border-top-right-radius:25px;
-    border-bottom-left-radius:20px ;
-    background-color: #f7f0f0e8;
+    color: #161515;
+    text-align: center;
+   
+
+}
+
+
+.card-uno:hover{
+   
     box-shadow: -8px 14px 10px 0px rgba(84, 64, 64, 0.75);
     -webkit-box-shadow: -8px 14px 10px 0px rgba(100, 87, 87, 0.75);
-    -moz-box-shadow: -8px 14px 10px 0px rgba(230, 215, 215, 0.75);
-
-}
-.card-uno{
-    background-color:#E4D1B9;
+    -moz-box-shadow: -8px 14px 10px 0px rgba(230, 215, 215, 0.75);  
     
+  
+}
+.card-dos:hover{
+    
+   box-shadow: -8px 14px 10px 0px rgba(84, 64, 64, 0.75);
+    -webkit-box-shadow: -8px 14px 10px 0px rgba(100, 87, 87, 0.75);
+    -moz-box-shadow: -8px 14px 10px 0px rgba(230, 215, 215, 0.75);  
+  
+}
+.card-tres:hover{
+   box-shadow: -8px 14px 10px 0px rgba(84, 64, 64, 0.75);
+    -webkit-box-shadow: -8px 14px 10px 0px rgba(100, 87, 87, 0.75);
+    -moz-box-shadow: -8px 14px 10px 0px rgba(230, 215, 215, 0.75);  
 }
 
 
-.titulo-card{
+.titulo-card {
     font-size: 25px;
     font-weight: bolder;
+    font-family: 'Poppins', sans-serif;
 }
 
-.p-card{
-  font-size: 20px;
-  text-transform: none;
+.p-card {
+    font-size: 20px;
+    text-transform: none;
 }
 
 /* ARTICULOS */
@@ -152,7 +194,7 @@ body {
     grid-column-start: span 3;
 }
 
-.galeria-item{
+.galeria-item {
     position: relative;
 }
 
@@ -163,18 +205,14 @@ body {
 
 }
 
-
-
-
-
-.item-uno{
+.item-uno {
     position: relative;
 }
 
 
 
-.titulo-item-uno{
-    background-color:rgba(247, 205, 172, 0.504) ;
+.titulo-item-uno {
+    background-color: rgba(247, 205, 172, 0.504);
     color: #0b0606;
     position: absolute;
     bottom: 35px;
@@ -184,58 +222,119 @@ body {
     text-transform: uppercase;
     font-size: 40px;
     font-weight: bolder;
-  
-    
 }
+.titulo-item-uno:hover{
+    background-color:#0b0606;
+    color: #E8EAE6;
+}
+
 /* CUEROS */
-.info-texto{
+.info-texto {
     display: flex;
-    justify-content: space-between;
-    text-align: center;
-    align-items:baseline;
+    justify-content: center;
+    align-items: baseline;
+    text-align: left;
     padding: 30px;
- 
+    margin-top: 30px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.287), rgba(0, 0, 0, 0.299)), url(imagenes/accesorios21.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+
+
+
+}
+
+.info-texto div {
+    width: 350px;
+    height: 300px;
+    margin: 100px 50px;
+    padding: 50px;
+    text-align: center;
+
+}
+
+/* .info-uno {
+    background-color: #12100f48;
+    border-radius: 20px;
+}
+
+.info-dos {
+    background-color: #9561616a;
+   
+}
+.info-tres{
+    background-color: #12100f48;
+    border-radius: 20px;
+} */
+
+.info-uno:hover{
+    background-color: #0b060691;
     
-
-}
-.info-texto div{
-    margin:150px 50px;
-}
-.info-uno{
-    background-color: #92BA92;
 }
 
+.info-dos:hover{
+    background-color: #0404035f;
+}
+.info-tres:hover{
+    background-color: #1615156d;
+}
+.encabezado-uno,
+.encabezado-dos,
+.encabezado-tres {
 
+    color: #E8EAE6;
+    font-size: 35px;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
 
+}
+
+.parrafo-uno,
+.parrafo-dos,
+.parrafo-tres {
+    font-weight: 600;
+    color: #a9896f;
+
+}
 
 /* FOOTER */
 .footer-container {
-    background-color: rgb(58, 56, 69);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #040403;
     margin-top: 50px;
     padding: 20px 20px;
-    color: rgb(247, 204, 172);
+    color: #E8EAE6;
     text-align: center;
 }
 
 .footer-container a {
     text-decoration: none;
-    color: black;
+    color: #a9896f;
     font-size: 20px;
 }
+
 .footer-container a:hover {
     color: rgba(240, 255, 255, 0.75);
+}
+
+.form-style{
+    align-items: center;
 }
 
 .btn-style {
     border: none;
     border-radius: 5px;
     color: rgb(247, 204, 172);
-    background-color: rgb(245, 245, 245);
+    background-color: #a9896f;
     font-size: 20px;
 }
 
 .btn-style:hover {
-    
+
     color: rgb(245, 245, 245);
     font-weight: bolder;
     background-color: rgba(0, 0, 0, 0.26);
@@ -251,7 +350,7 @@ body {
     .texto-hero {
         flex-direction: column;
         align-items: center;
-       
+
     }
 
     .mayoristas-section {
@@ -262,9 +361,7 @@ body {
         -webkit-box-shadow: -16px 9px 5px -5px rgba(15, 14, 15, 0.75);
         -moz-box-shadow: -16px 9px 5px -5px rgba(15, 14, 15, 0.75);
     }
-    .card-uno{
-        background-color: #92BA92;
-    }
+
 
 }
 
@@ -273,12 +370,17 @@ body {
         display: grid;
         grid-template-columns: 1fr;
     }
-    .titulo-item-uno{
-        background-color:rgba(245, 238, 233, 0.504) ;
+
+    .titulo-item-uno {
+        background-color: rgba(245, 238, 233, 0.504);
+        font-size: 25px;
     }
+
     .footer-container {
-        background-color: rgb(249, 235, 200);
-        color: black;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgb(14, 13, 13);
+        color: rgb(243, 214, 214);
         margin-top: 50px;
         padding: 20px 20px;
     }
@@ -288,4 +390,10 @@ body {
         background-color: rgb(224, 216, 176);
         font-size: 20px;
     }
+
+    .info-texto {
+        flex-direction: column;
+        align-items: center;
+    }
+    
 }
