--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,4 @@
 @import'../scss/componentes/mayoristas';
 @import'../scss/componentes/sectionArticulos';
 @import'../scss/componentes/sectionCuero';
+@import'../scss/componentes/footer';
