--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -18,10 +22,14 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 .principal-cartel .titulo-cartel {
   font-size: 2.5rem;
   background-color: rgb(0, 0, 0);
-  color: white;
+  color: #D0C9C0;
   text-align: center;
   animation-name: titulo;
   animation-duration: 30s;
@@ -45,17 +53,19 @@ body {
   }
 }
 
-.header {
-  color: black;
-  font-weight: bolder;
-}
 .header .titulo-marca {
+  color: black;
   font-size: 4rem;
-}
-.header .titulo-marca .nav-link a {
   font-weight: bolder;
+}
+
+.nav-link {
+  font-weight: 500;
+  color: #0b0606;
   font-size: 2rem;
-  color: #F900BF;
+}
+.nav-link:hover {
+  color: #A2B38B;
 }
 
 .hero-img {
