--- a/scss/base/_estilosGenerales.scss
+++ b/scss/base/_estilosGenerales.scss
@@ -7,8 +7,7 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
-// html{
-//    font-size: 62.5%;
-
-//  }
+ html{
+    font-size: 62.5%;
+ }
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:ital,wght@0,300;1,300&family=Poppins:wght@300&display=swap');
