--- a/scss/componentes/header.scss
+++ b/scss/componentes/header.scss
@@ -1,10 +1,10 @@
-@import'../base/estilosGenerales';
+@import'../base/_estilosGenerales';
 
 .principal-cartel {
     .titulo-cartel {
         font-size: 2.5rem;
         background-color: rgb(0, 0, 0);
-        color: white;
+        color: #D0C9C0;
         text-align: center;
         animation-name: titulo;
         animation-duration: 30s;
@@ -39,18 +39,24 @@
 }
 
 .header {
-    color: black;
-    font-weight: bolder;
-
-    .titulo-marca{
+   .titulo-marca{
+        color: black;
         font-size: 4rem;
-      
-            .nav-link a {
-                font-weight: bolder;
-                font-size: 2rem;
-                color: #F900BF;
-            }
+        font-weight: bolder;
+       
+
+          
         }
 
     }
 
+    .nav-link{
+        
+        font-weight: 500;
+        color: #0b0606;
+        font-size: 2rem;
+        &:hover{
+            color: #A2B38B;
+        }
+
+    }
