--- a/scss/componentes/footer.scss
+++ b/scss/componentes/footer.scss
@@ -23,6 +23,16 @@
         font-size: 20px;
         &:hover{
             color: rgba(240, 255, 255, 0.75);
+
+        .btn-chat img{
+            position: fixed;
+            width: 55px;
+            height: 55px;
+            bottom: 33px;
+            right: 33px;
+            line-height: 55px;
+            z-index: 100;
+            }
         }
     }
 
