--- a/scss/componentes/header.scss
+++ b/scss/componentes/header.scss
@@ -2,12 +2,19 @@
 
 .principal-cartel {
     .titulo-cartel {
-        font-size: 2.5rem;
+        font-size: 2rem;
+        letter-spacing:5px;
         background-color: rgb(0, 0, 0);
         color: #D0C9C0;
         text-align: center;
         animation-name: titulo;
         animation-duration: 30s;
+        @media screen and (max-width: 600px) {
+            font-size: 1.5rem;
+            letter-spacing:none;
+            color:#9A0680 ;
+            font-weight: bolder;
+   }
 
         @keyframes titulo {
             0% {
@@ -51,10 +58,9 @@
     }
 
     .nav-link{
-        
         font-weight: 500;
         color: #0b0606;
-        font-size: 2rem;
+        font-size: 1.8rem;
         &:hover{
             color: #A2B38B;
         }
