--- a/scss/componentes/mayoristas.scss
+++ b/scss/componentes/mayoristas.scss
@@ -5,7 +5,6 @@
     text-align: left;
 
     @media screen and (max-width:750px) {
-
         flex-direction: column;
         align-items: center;
         font-size: 1.5rem;
@@ -35,13 +34,15 @@
         }
 
         .titulo-card {
+            letter-spacing: 0.5rem;
             color: black;
             font-size: 2.5rem;
             font-weight: bolder;
 
-            .p-card {
+            p {
+                letter-spacing: 0.5rem;
                 color: black;
-                font-size: 2.5rem;
+                font-size: 3rem;
                 font-weight: bolder;
 
             }
