--- a/scss/componentes/sectionCuero.scss
+++ b/scss/componentes/sectionCuero.scss
@@ -13,27 +13,67 @@
     @media only screen and (max-width: 600px) {
         flex-direction: column;
         align-items: center;
+       
+
+      
+
     }
 }
-    .info-uno{
-        margin: 100px 50px;
-        padding: 50px;
-        text-align: center;
-        background-color: #0F0E0E;
-        .encabezado-uno{
-                 color: #E8EAE6;
-                font-size: 3.5rem;
-                font-weight: 500;
-                font-family: 'Poppins', sans-serif;
-            p{
-                font-weight: 600;
-                color: #ECDBBA;
-                font-size: 3rem;
-
-
-            }
-        }
-    }
-
+   
     
    
+.info-uno, .info-dos,.info-tres{
+    width: 450px;
+    height: 400px;
+    margin: 100px 50px;
+    padding: 50px;
+    text-align: center;
+    background-color: #0f0e0ec1;
+
+     
+    @media only screen and (max-width: 600px) {
+        background-color: #e8eae669;
+        width: 350px;
+        height: 300px;
+        
+        
+        
+ 
+       
+ 
+     }
+
+    &:hover{
+        background-color: black;
+   
+       
+        
+    }
+}
+.encabezado-cueros{
+     color: #E8EAE6;
+     font-size: 3rem;
+     font-weight: 700;
+     font-family: 'Poppins', sans-serif;
+     @media only screen and (max-width: 600px) {
+        color: black;
+        font-size: 2rem;
+        font-weight: bolder;
+        
+        
+ 
+
+}
+}
+.parrafo-cueros{
+    text-align: center;
+    font-weight: 500;
+    color: #ECDBBA;
+    font-size: 2rem;
+    @media only screen and (max-width: 600px) {
+        color: black;
+        font-size: 1.8rem;
+        font-weight: bolder;
+        
+}
+}
