--- a/scss/componentes/header.scss
+++ b/scss/componentes/header.scss
@@ -1,19 +1,19 @@
 @import'../base/_estilosGenerales';
+@import'../base/_listas';
 
 .principal-cartel {
     .titulo-cartel {
-        font-size: 2rem;
-        letter-spacing:5px;
-        background-color: rgb(0, 0, 0);
-        color: #D0C9C0;
+        font-size: nth($font-size, 3 );
+         background-color: nth($bg-color, 5 );
+        color: nth($colores, 3);
         text-align: center;
         animation-name: titulo;
         animation-duration: 30s;
         @media screen and (max-width: 600px) {
-            font-size: 1.5rem;
+            font-size: nth($font-size, 1);
             letter-spacing:none;
             color:#9A0680 ;
-            font-weight: bolder;
+            font-weight:nth($font-weight , 4 );
    }
 
         @keyframes titulo {
@@ -47,9 +47,9 @@
 
 .header {
    .titulo-marca{
-        color: black;
-        font-size: 4rem;
-        font-weight: bolder;
+        color:nth($colores, 1 );
+        font-size: nth($font-size, 6 );
+        font-weight: nth($font-weight, 4 );
        
 
           
@@ -57,12 +57,13 @@
 
     }
 
-    .nav-link{
-        font-weight: 500;
-        color: #0b0606;
-        font-size: 1.8rem;
+    .nav-link {
+        font-weight: nth($font-weight, 1 );
+        color: nth($colores, 1 );
+        font-size: nth($font-size , 2);
+        
         &:hover{
-            color: #A2B38B;
+            color: nth($colores, 5 );
         }
 
     }
