--- a/scss/componentes/sectionArticulos.scss
+++ b/scss/componentes/sectionArticulos.scss
@@ -21,8 +21,8 @@
 
 
     .parrafo-item {
-        font-size: 2.5 rem;
-        font-weight: bolder;
+        font-size: nth($font-size, 4 );
+        font-weight:nth($font-weight, 4 );
         text-align: center;
        
 
@@ -32,25 +32,26 @@
 .item-uno {
     position: relative;
     .titulo-item-uno {
-        background-color: rgba(247, 205, 172, 0.504);
-        color: #0b0606;
+        background-color: nth($bg-color , 9 );
+        color: nth($colores,1 );
         position: absolute;
         bottom: 35px;
         margin-left: 25px;
         padding: 20px;
         border-radius: 5px;
         text-transform: uppercase;
-        font-size: 4rem;
+        font-size: nth($font-size, 6 );
         font-weight: bolder;
         @media only screen and (max-width: 600px) {
-            font-size: 2.5rem;
+            font-size: nth($font-size, 4 );
         }
 
         &:hover{
-            background-color:#0b0606;
-            color: #E8EAE6;  
+            background-color:nth($bg-color, 7 );
+            color:nth($colores, 3 );  
            
 
         }
     }
 }
+
