--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,6 @@
 @import'../scss/componentes/sectionArticulos';
 @import'../scss/componentes/sectionCuero';
 @import'../scss/componentes/footer';
+@import '../scss/base/listas';
+@import'../scss/base/extends';
+@import'../scss/base/mixin';
